css/header.css
#navigation-bar {
    background-color: black;
    display: flex;
    height: 75px;
}

#navigation-bar a {
    font-size: 13;
    color: white;
    text-transform: uppercase;
    text-decoration: none;
}

#logo {
    width: 100%;
    padding: 10px;
    margin: 10px;
}

#navigation {
    display: flex;
    list-style-type: none;
    margin: 0 15 0 0;
    padding: 0;
}

#navigation > li {
    padding: 25px;
}

#navigation > li:hover {
    background-color: rgb(36, 36, 36);
}

@media (max-width: 900px) {
    #navigation-bar {
        flex-direction: column;
    }

    #navigation {
        background-color: rgb(94, 94, 94);
        margin: 0;
    }
}

@media (max-width: 500px) {
    #logo {
        width: auto;
    }

    #logo img {
        width: 100%;
    }

    #navigation {
        flex-direction: column;
    }

    #navigation > li {
        border-style: solid;
        border-color: black;
        border-width: 0 0 1px 0;
        text-align: center;
    }
}

